objects/ALTF__Core_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ALTF__Add_Organizer_To_Tandi_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected, the organizer of a Test &amp; Improve gets an email invite that they can add to their personal calendar.</description>
        <inlineHelpText>When this checkbox is selected, the organizer of a Test &amp; Improve gets an email invite that they can add to their personal calendar.</inlineHelpText>
        <label>DEPRECATED Add Organizer T&amp;I Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Chatter_Snooze_Time__c</fullName>
        <defaultValue>30.0</defaultValue>
        <description>Surpress update messages for Altify pages for these amount of minutes</description>
        <inlineHelpText>This is the number (in minutes) controlling the regularity of chatter notifications as users update their Altify Opportunities. No more than 1 chatter notification can be generated within this time duration for each type of update on an opportuni</inlineHelpText>
        <label>Chatter Snooze Time</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Company_Name__c</fullName>
        <defaultValue>&apos;Altify&apos;</defaultValue>
        <description>This is the company name.</description>
        <inlineHelpText>This is the company name.</inlineHelpText>
        <label>Company Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Create_Shadow_Opp_during_Opp_Upsert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this checkbox is selected, an Altify Opportunity record is created automatically when a new opportunity is created in Salesforce.</description>
        <inlineHelpText>When this checkbox is selected, an Altify Opportunity record is created automatically when a new opportunity is created in Salesforce.</inlineHelpText>
        <label>Auto enable Altify for new Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Account_Search_Term_Prefix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable percentage character prefix of the Account search term.</description>
        <inlineHelpText>Disable percentage character prefix of the Account search term.</inlineHelpText>
        <label>Disable Account search term prefix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Altify_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Altify Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_CRUD_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the Focused View toggle on CRUD dialogs. The Focused View limits the displayed fields to mandatory fields and a default selection of key fields.</description>
        <inlineHelpText>Hides the Focused View toggle on CRUD dialogs. The Focused View limits the displayed fields to mandatory fields and a default selection of key fields.</inlineHelpText>
        <label>Hide Focused View Option in CRUD Dialogs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to disable Chatter updates for Altify pages.</description>
        <inlineHelpText>Use this field to disable Chatter updates for Altify pages.</inlineHelpText>
        <label>Salesforce Chatter Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_PDF_for_Exec_Briefing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selecting this checkbox disables the PDF output option for Executive Briefing</inlineHelpText>
        <label>Disable PDF for Exec Briefing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Team_View_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Block users ability to export data from Team View</description>
        <label>Disable Team View Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disabled_Trigger_List__c</fullName>
        <description>This setting allows us to selective disable Altify triggers should that be required. The value of this field should be a comma separated list of trigger names. This field should only be used by TAS group administrators</description>
        <inlineHelpText>This setting allows us to selective disable Altify triggers should that be required. The value of this field should be a comma separated list of trigger names. This field should only be used by TAS group administrators</inlineHelpText>
        <label>Disabled Trigger List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_Actions_Query_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, this setting may improve the performance when deleting actions on Opportunity Manager&apos;s Actions tab.</description>
        <inlineHelpText>When enabled, this setting may improve the performance when deleting actions on Opportunity Manager&apos;s Actions tab.</inlineHelpText>
        <label>Enable Actions Query Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_Asynchronous_Remote_Calls__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this checkbox is selected, the remote calls that populate the panels on the Plan Details tab in Account Manager are asynchronous. Otherwise, they’re synchronous.</description>
        <inlineHelpText>When this checkbox is selected, the remote calls that populate the panels on the Plan Details tab in Account Manager are asynchronous. Otherwise, they’re synchronous.</inlineHelpText>
        <label>Enable Asynchronous Remote Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_CRUD_Advanced_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable CRUD advanced search of Account and Contact records.</description>
        <inlineHelpText>Enable CRUD advanced search of Account and Contact records.</inlineHelpText>
        <label>Enable CRUD Advanced Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_FLS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Field Level Security</description>
        <inlineHelpText>Enable Field Level Security</inlineHelpText>
        <label>Enable FLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_Max_for_Contact_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Max For Relationship Map Contacts</description>
        <inlineHelpText>Allows your organization to configure your own insights (using Max) to replace “Suggested Target” coaching on the Relationship Map. These insights will replace the default Suggested Target coaching provided by Upland Altify.</inlineHelpText>
        <label>Enable Max For Relationship Map Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Help_URL_base__c</fullName>
        <description>Specify the base URL for the help links</description>
        <inlineHelpText>Specify the base URL for the help</inlineHelpText>
        <label>Help URL base</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Language_Codes__c</fullName>
        <description>Comma separated list of translation workbench languages</description>
        <label>Language Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Mock_Today__c</fullName>
        <description>Allows user to override the today() function.</description>
        <label>Mock Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Number_Contacts_On_Map__c</fullName>
        <description>Number of contacts needed on a map to get credit for OM/AM completeness</description>
        <inlineHelpText>Number of contacts needed on a map to get credit for OM/AM completeness</inlineHelpText>
        <label>Contacts on map for completeness</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Quip_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quip Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Run_Opportunity_Update_Without_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is currently being used to control the behavior when Altify makes updates to the Salesforce opportunity. This setting should be left unticked unless otherwise instructed by your TAS Group engagement manager.</description>
        <inlineHelpText>This is currently being used to control the behavior when Altify makes updates to the Salesforce opportunity. This setting should be left unticked unless otherwise instructed by your TAS Group engagement manager.</inlineHelpText>
        <label>Opportunity Update Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Salesforce_Shield_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Salesforce Shield-Enabled is enabled on the Org so that Altify Apps can take the appropriate action for queries that are broken by Shield.</description>
        <inlineHelpText>This makes Altify software compatible with a Salesforce Shield-enabled org. However, it affects certain Altify querying operations, so the setting should only be enabled on the advice of Altify.</inlineHelpText>
        <label>Salesforce Shield-Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Signal_10__c</fullName>
        <label>Signal 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Signal_1__c</fullName>
        <label>Signal 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Signal_2__c</fullName>
        <label>Signal 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Skip_Triggers_For_Unlicensed_Users__c</fullName>
        <description>Comma seperated list of triggers that will be skipped if the user does not have a core license</description>
        <inlineHelpText>Comma seperated list of triggers that will be skipped if the user does not have a core license</inlineHelpText>
        <label>Skip Triggers for non-core users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Support_Email__c</fullName>
        <defaultValue>&apos;altify-support@uplandsoftware.com&apos;</defaultValue>
        <description>This is the company support email address.</description>
        <inlineHelpText>This is the company support email address.</inlineHelpText>
        <label>Support Email</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TANDI_Admin_Email__c</fullName>
        <description>The nominated administrator is notified by email when a user without the required permissions is invited to a T&amp;I. The email prompts the admin to allocate the necessary permissions to the invitee.</description>
        <inlineHelpText>The nominated administrator is notified by email when a user without the required permissions is invited to a T&amp;I. The email prompts the admin to allocate the necessary permissions to the invitee.</inlineHelpText>
        <label>TANDI Admin Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr10__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr1__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr2__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Comma seperated list of triggers that will be skipped if the user does not have a core license</inlineHelpText>
        <label>TempStr2__c</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_CRUD_Add_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected, the user adds contacts using your preferred Salesforce CRUD layout. When it is deselected, the user adds contacts using Altify’s default mode.</description>
        <inlineHelpText>When this checkbox is selected, the user adds contacts using your preferred Salesforce CRUD layout. When it is deselected, the user adds contacts using Altify’s default mode.</inlineHelpText>
        <label>Use CRUD Add Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_CRUD_Add_Edit_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected, the user adds or edits actions using your preferred Salesforce CRUD layout. When it is deselected, the user adds or edits actions using Altify’s default mode.</description>
        <inlineHelpText>When this checkbox is selected, the user adds or edits actions using your preferred Salesforce CRUD layout. When it is deselected, the user adds or edits actions using Altify’s default mode.</inlineHelpText>
        <label>Use CRUD Add Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__User_Query_Filter__c</fullName>
        <description>SOQL filter for quering Users</description>
        <inlineHelpText>SOQL filter for quering Users</inlineHelpText>
        <label>User Query Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Altify Core Settings</label>
</CustomObject>